--- a/style.css
+++ b/style.css
@@ -1,70 +1,139 @@
-@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap');
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap");
+/* Box sizing rules */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
 
-body{
-    background-color: hsl(212, 45%, 89%);
-    font-family: 'Outfit', sans-serif;
-    color: hsl(218, 44%, 22%);
+/* Remove default margin */
+body,
+h1,
+h2,
+h3,
+h4,
+p,
+figure,
+blockquote,
+dl,
+dd {
+  margin: 0;
 }
-main{
-    margin-top: 30px;
-    
+
+/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
+ul[role="list"],
+ol[role="list"] {
+  list-style: none;
 }
-section{
-    width: 22%;
-    background-color: #fff;
-    padding: 20px;
-    margin: auto;
-    border-radius: 20px;
+
+/* Set core root defaults */
+html:focus-within {
+  scroll-behavior: smooth;
 }
-img{
-    border-radius: 20px;
+
+/* Set core body defaults */
+body {
+  min-height: 100vh;
+  text-rendering: optimizeSpeed;
+  line-height: 1.5;
 }
-article{
-    padding: 20px 5px;
+
+/* A elements that don't have a class get default styles */
+a:not([class]) {
+  text-decoration-skip-ink: auto;
 }
-h2{
-    text-align: center;
-    font-size: 18px;
-    font-weight: 700;
+
+/* Make images easier to work with */
+img,
+picture {
+  max-width: 100%;
+  display: block;
 }
-p{
-    padding-top: 20px;
-    font-size: 15px;
-    text-align: center;
-    font-weight: 400;
-    color: hsl(220, 15%, 55%);
+
+/* Inherit fonts for inputs and buttons */
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+
+/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
+@media (prefers-reduced-motion: reduce) {
+  html:focus-within {
+    scroll-behavior: auto;
+  }
+
+  *,
+  *::before,
+  *::after {
+    animation-duration: 0.01ms !important;
+    animation-iteration-count: 1 !important;
+    transition-duration: 0.01ms !important;
+    scroll-behavior: auto !important;
+  }
+}
+body {
+  background-color: hsl(212, 45%, 89%);
+  font-family: "Outfit", sans-serif;
+  color: hsl(218, 44%, 22%);
+}
+main {
+  margin-top: 5rem;
+}
+img {
+  border-radius: 20px;
+}
+article {
+  padding: 20px 5px;
+  width: 22%;
+  background-color: #fff;
+  padding: 1.2rem;
+  margin: auto;
+  border-radius: 1.3rem;
+}
+h1 {
+  padding-top: 0.8rem;
+  text-align: center;
+  font-size: 1.2rem;
+  font-weight: 700;
+}
+p {
+  padding-top: 1.2rem;
+  font-size: 1rem;
+  text-align: center;
+  font-weight: 400;
+  color: hsl(220, 15%, 55%);
 }
 @media only screen and (max-width: 1024px) {
-    section{
+  article {
     width: 35%;
     background-color: #fff;
-    padding: 20px;
+    padding: 1.2rem;
     margin: auto;
-    border-radius: 20px;
-}
+    border-radius: 1.3rem;
+  }
 }
 
 @media only screen and (max-width: 768px) {
-    section{
+  main {
+    margin-top: 2rem;
+  }
+  article {
     width: 45%;
     background-color: #fff;
-    padding: 20px;
+    padding: 1.2rem;
     margin: auto;
-    border-radius: 20px;
-}
+    border-radius: 1.3rem;
+  }
 }
 
 @media only screen and (max-width: 480px) {
-    section{
+  article {
     width: 90%;
     background-color: #fff;
-    padding: 20px;
-    margin: auto;
-    border-radius: 20px;
-}
+    padding: 1.2rem;
+    margin: auto 20px;
+    border-radius: 1.3rem;
+  }
 }
